@@ -3,13 +3,11 @@ package l2trunk.scripts.ai.seedofinfinity;
 import l2trunk.gameserver.ai.DefaultAI;
 import l2trunk.gameserver.model.Creature;
 import l2trunk.gameserver.model.instances.NpcInstance;
-import l2trunk.gameserver.tables.SkillTable;
 
-import java.util.Arrays;
 import java.util.List;
 
 public final class AliveTumor extends DefaultAI {
-    private static final List<Integer> regenCoffins = Arrays.asList(18706, 18709, 18710);
+    private static final List<Integer> regenCoffins = List.of(18706, 18709, 18710);
     private long checkTimer = 0;
     private int coffinsCount = 0;
 
@@ -24,10 +22,10 @@ public final class AliveTumor extends DefaultAI {
 
         if (checkTimer + 10000 < System.currentTimeMillis()) {
             checkTimer = System.currentTimeMillis();
-            int i = 0;
-            for (NpcInstance n : actor.getAroundNpc(400, 300))
-                if (regenCoffins.contains(n.getNpcId()) && !n.isDead())
-                    i++;
+            int i = (int) actor.getAroundNpc(400, 300)
+                    .filter(n -> regenCoffins.contains(n.getNpcId()))
+                    .filter(n -> !n.isDead())
+                    .count();
             if (coffinsCount != i) {
                 coffinsCount = i;
                 coffinsCount = Math.min(coffinsCount, 12);
