@@ -9,13 +9,12 @@ import l2trunk.gameserver.network.serverpackets.PlaySound;
 import l2trunk.gameserver.templates.npc.NpcTemplate;
 import l2trunk.gameserver.utils.Location;
 
-import java.util.Arrays;
 import java.util.List;
 
-public class OrfenInstance extends BossInstance {
+public final class OrfenInstance extends BossInstance {
     private static final Location nest = new Location(43728, 17220, -4342);
 
-    private static final List<Location> locs = Arrays.asList(
+    private static final List<Location> locs = List.of(
             new Location(55024, 17368, -5412),
             new Location(53504, 21248, -5496),
             new Location(53248, 24576, -5272));
@@ -30,7 +29,7 @@ public class OrfenInstance extends BossInstance {
         Location loc = flag ? nest : Rnd.get(locs);
         setSpawnedLoc(loc);
         getAggroList().clear(true);
-        getAI().setIntention(CtrlIntention.AI_INTENTION_ACTIVE, null, null);
+        getAI().setIntention(CtrlIntention.AI_INTENTION_ACTIVE);
         teleToLocation(loc);
     }
 
