@@ -7,13 +7,11 @@ import l2trunk.gameserver.network.serverpackets.ExChangeClientEffectInfo;
 import l2trunk.gameserver.templates.npc.NpcTemplate;
 import l2trunk.gameserver.utils.Location;
 
-import java.util.Arrays;
 import java.util.List;
 
 public final class SirraInstance extends NpcInstance {
-
-    private static final List<Integer> questInstances = Arrays.asList(140, 138, 141);
-    private static final List<Integer> warInstances = Arrays.asList(139, 144);
+    private static final List<Integer> questInstances = List.of(140, 138, 141);
+    private static final List<Integer> warInstances = List.of(139, 144);
 
     public SirraInstance(int objectId, NpcTemplate template) {
         super(objectId, template);
@@ -40,10 +38,10 @@ public final class SirraInstance extends NpcInstance {
         if (!canBypassCheck(player, this))
             return;
 
-        if (command.equalsIgnoreCase("teleport_in")) {
-            for (NpcInstance n : getReflection().getNpcs())
-                if (n.getNpcId() == 29179 || n.getNpcId() == 29180)
-                    player.sendPacket(new ExChangeClientEffectInfo(2));
+        if ("teleport_in".equalsIgnoreCase(command)) {
+            getReflection().getNpcs()
+                    .filter(n -> (n.getNpcId() == 29179 || n.getNpcId() == 29180))
+                    .forEach(n -> player.sendPacket(new ExChangeClientEffectInfo(2)));
             player.teleToLocation(new Location(114712, -113544, -11225));
         } else
             super.onBypassFeedback(player, command);
