@@ -1,31 +1,33 @@
 package l2trunk.scripts.quests;
 
-import l2trunk.commons.lang.ArrayUtils;
 import l2trunk.commons.util.Rnd;
 import l2trunk.gameserver.model.instances.NpcInstance;
 import l2trunk.gameserver.model.quest.Quest;
 import l2trunk.gameserver.model.quest.QuestState;
-import l2trunk.gameserver.scripts.ScriptFile;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.StringTokenizer;
 
-public final class _455_WingsofSand extends Quest implements ScriptFile {
-    private static final List<Integer> SeparatedSoul = Arrays.asList(32864, 32865, 32866, 32867, 32868, 32869, 32870);
+public final class _455_WingsofSand extends Quest {
+    private static final List<Integer> SeparatedSoul = List.of(32864, 32865, 32866, 32867, 32868, 32869, 32870);
     private static final int LargeDragon = 17250;
-    private static final int[] raids = {25718, 25719, 25720, 25721, 25722, 25723, 25724};
+    private static final List<Integer> raids = List.of(25718, 25719, 25720, 25721, 25722, 25723, 25724);
 
     //Rewards
-    private static final int[] reward_resipes_w = {15815, 15816, 15817, 15818, 15819, 15820, 15821, 15822, 15823, 15824, 15825};
-    private static final int[] reward_resipes_a = {15792, 15793, 15794, 15795, 15796, 15797, 15798, 15799, 15800, 15801, 15802, 15803, 15804, 15805, 15806, 15807, 15808};
-    private static final int[] reward_resipes_acc = {15809, 15810, 15811};
+    private static final List<Integer> reward_resipes_w = List.of(
+            15815, 15816, 15817, 15818, 15819, 15820, 15821, 15822, 15823, 15824, 15825);
+    private static final List<Integer> reward_resipes_a = List.of(
+            15792, 15793, 15794, 15795, 15796, 15797, 15798, 15799, 15800, 15801, 15802, 15803, 15804, 15805, 15806, 15807, 15808);
+    private static final List<Integer> reward_resipes_acc = List.of(15809, 15810, 15811);
 
-    private static final int[] reward_mats_w = {15634, 15635, 15636, 15637, 15638, 15639, 15640, 15641, 15642, 15643, 15644};
-    private static final int[] reward_mats_a = {15660, 15661, 15662, 15663, 15664, 15665, 15666, 15667, 15668, 15669, 15670, 15671, 15672, 15673, 15674, 15675, 15691, 15693};
-    private static final int[] reward_mats_acc = {15769, 15770, 15771};
+    private static final List<Integer> reward_mats_w = List.of(
+            15634, 15635, 15636, 15637, 15638, 15639, 15640, 15641, 15642, 15643, 15644);
+    private static final List<Integer> reward_mats_a = List.of(
+            15660, 15661, 15662, 15663, 15664, 15665, 15666, 15667, 15668, 15669,
+            15670, 15671, 15672, 15673, 15674, 15675, 15691, 156930);
+    private static final List<Integer> reward_mats_acc = List.of(15769, 15770, 15771);
 
-    private static final int[] reward_attr_crystal = {9552, 9553, 9554, 9555, 9556, 9557};
+    private static final List<Integer> reward_attr_crystal = List.of(9552, 9553, 9554, 9555, 9556, 9557);
     private static final int[] reward_ench_scroll = {6577, 6578};
 
     public _455_WingsofSand() {
@@ -48,16 +50,16 @@ public final class _455_WingsofSand extends Quest implements ScriptFile {
             tokenizer.nextToken();
             switch (Integer.parseInt(tokenizer.nextToken())) {
                 case 1:
-                    st.giveItems(reward_mats_w[Rnd.get(reward_mats_w.length)], Rnd.get(1, 2));
+                    st.giveItems(Rnd.get(reward_mats_w), Rnd.get(1, 2));
                     break;
                 case 2:
-                    st.giveItems(reward_mats_a[Rnd.get(reward_mats_a.length)], Rnd.get(1, 2));
+                    st.giveItems(Rnd.get(reward_mats_a), Rnd.get(1, 2));
                     break;
                 case 3:
-                    st.giveItems(reward_mats_acc[Rnd.get(reward_mats_acc.length)], Rnd.get(1, 2));
+                    st.giveItems(Rnd.get(reward_mats_acc), Rnd.get(1, 2));
                     break;
                 case 4:
-                    st.giveItems(reward_attr_crystal[Rnd.get(reward_attr_crystal.length)], 1);
+                    st.giveItems(Rnd.get(reward_attr_crystal));
                     break;
                 default:
                     break;
@@ -70,18 +72,18 @@ public final class _455_WingsofSand extends Quest implements ScriptFile {
             st.takeAllItems(LargeDragon);
             StringTokenizer tokenizer = new StringTokenizer(event);
             tokenizer.nextToken();
-            switch (Integer.parseInt(tokenizer.nextToken())) {
-                case 1:
-                    st.giveItems(reward_resipes_w[Rnd.get(reward_resipes_w.length)], 1);
+            switch (tokenizer.nextToken()) {
+                case "1":
+                    st.giveItems(Rnd.get(reward_resipes_w));
                     break;
-                case 2:
-                    st.giveItems(reward_resipes_a[Rnd.get(reward_resipes_a.length)], 1);
+                case "2":
+                    st.giveItems(Rnd.get(reward_resipes_a));
                     break;
-                case 3:
-                    st.giveItems(reward_resipes_acc[Rnd.get(reward_resipes_acc.length)], 1);
+                case "3":
+                    st.giveItems(Rnd.get(reward_resipes_acc));
                     break;
-                case 4:
-                    st.giveItems(reward_attr_crystal[Rnd.get(reward_attr_crystal.length)], 2);
+                case "4":
+                    st.giveItems(Rnd.get(reward_attr_crystal), 2);
                     break;
                 default:
                     break;
@@ -140,15 +142,4 @@ public final class _455_WingsofSand extends Quest implements ScriptFile {
         return null;
     }
 
-    @Override
-    public void onLoad() {
-    }
-
-    @Override
-    public void onReload() {
-    }
-
-    @Override
-    public void onShutdown() {
-    }
 }
